// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with project and with project selector 1`] = `
<Fragment>
  <div
    className="headerBar"
    id="header-bar"
  >
    <div
      className="content"
    >
      <withRouter(Connect(ProjectSelector))
        openProjectSelector={true}
      />
      <div
        className="nav-links"
      >
        <div
          className="menuContainer"
        >
          <withRouter(Connect(UserMenu)) />
        </div>
      </div>
    </div>
  </div>
  <withRouter(Connect(NoFoundationsIDBanner)) />
</Fragment>
`;

exports[`Should render with project and without project selector 1`] = `
<Fragment>
  <div
    className="headerBar"
    id="header-bar"
  >
    <div
      className="content"
    >
      <withRouter(Connect(ProjectSelector))
        openProjectSelector={false}
      />
      <div
        className="nav-links"
      >
        <div
          className="menuContainer"
        >
          <withRouter(Connect(UserMenu)) />
        </div>
      </div>
    </div>
  </div>
  <withRouter(Connect(NoFoundationsIDBanner)) />
</Fragment>
`;

exports[`Should render without project and without project selector 1`] = `
<Fragment>
  <div
    className="headerBar"
    id="header-bar"
  >
    <div
      className="content"
    >
      <withRouter(Connect(ProjectSelector))
        openProjectSelector={false}
      />
      <div
        className="nav-links"
      >
        <div
          className="menuContainer"
        >
          <withRouter(Connect(UserMenu)) />
        </div>
      </div>
    </div>
  </div>
  <withRouter(Connect(NoFoundationsIDBanner)) />
</Fragment>
`;
